erDiagram
    USERS {
        BIGINT id PK "用户主键"
        VARCHAR username UK "登录用户名"
        VARCHAR password "加密密码"
        INT status "0禁用/1启用"
        ENUM role "ADMIN/CUSTOMER"
        VARCHAR nickname "昵称"
        VARCHAR email "邮箱"
        VARCHAR phone "手机号"
        VARCHAR avatar_url "头像地址"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    USER_ADDRESS {
        BIGINT id PK "地址主键"
        BIGINT user_id FK "所属用户"
        VARCHAR receiver_name "收货人"
        VARCHAR receiver_phone "收货手机号"
        VARCHAR province "省份"
        VARCHAR city "城市"
        VARCHAR district "区县"
        VARCHAR detail_address "详细地址"
        VARCHAR postal_code "邮政编码"
        BOOLEAN default_address "是否默认"
        BIGINT default_user_id UK "生成列；默认地址时等于user_id"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    PUBLISHER {
        BIGINT id PK "出版社主键"
        VARCHAR name UK "出版社名称"
        VARCHAR phone "联系电话"
        VARCHAR address "地址"
        VARCHAR introduction "简介"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    AUTHOR {
        BIGINT id PK "作者主键"
        VARCHAR name "作者姓名"
        VARCHAR country "国家或地区"
        VARCHAR introduction "作者简介"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    CATEGORY {
        BIGINT id PK "分类主键"
        VARCHAR name UK "分类名称"
        BIGINT parent_id FK "父分类，可空"
        INT sort_order "同级排序"
        INT status "0禁用/1启用"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    BOOK {
        BIGINT id PK "图书主键"
        VARCHAR isbn UK "ISBN"
        VARCHAR title "书名"
        BIGINT publisher_id FK "出版社"
        DECIMAL original_price "原价"
        DECIMAL sale_price "售价"
        INT stock "当前库存"
        BIGINT sales_count "销量"
        DATE publish_date "出版日期"
        VARCHAR edition "版本"
        INT pages "页数"
        TEXT description "图书简介"
        VARCHAR cover_url "封面地址"
        ENUM status "ON_SALE/OFF_SALE"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    BOOK_AUTHOR {
        BIGINT book_id PK, FK "图书主键组成"
        BIGINT author_id PK, FK "作者主键组成"
        INT author_order "作者顺序"
    }

    BOOK_CATEGORY {
        BIGINT book_id PK, FK "图书主键组成"
        BIGINT category_id PK, FK "分类主键组成"
    }

    CART_ITEM {
        BIGINT id PK "购物车明细主键"
        BIGINT user_id FK "所属用户"
        BIGINT book_id FK "图书"
        INT quantity "购买数量"
        BOOLEAN selected "是否选中结算"
        DATETIME create_time "加入时间"
        DATETIME update_time "更新时间"
    }

    BOOK_ORDER {
        BIGINT id PK "订单主键"
        VARCHAR order_no UK "订单编号"
        BIGINT user_id FK "下单用户"
        ENUM status "订单状态"
        DECIMAL total_amount "商品总额"
        DECIMAL discount_amount "优惠金额"
        DECIMAL shipping_fee "运费"
        DECIMAL payable_amount "应付金额"
        DECIMAL refunded_amount "已批准退款额"
        VARCHAR receiver_name "收货人快照"
        VARCHAR receiver_phone "手机号快照"
        VARCHAR receiver_address "地址快照"
        VARCHAR remark "订单备注"
        DATETIME expire_time "待支付过期时间"
        DATETIME create_time "下单时间"
        DATETIME update_time "更新时间"
        DATETIME paid_time "支付时间"
        DATETIME shipped_time "发货时间"
        DATETIME completed_time "完成时间"
        DATETIME cancelled_time "取消时间"
    }

    ORDER_ITEM {
        BIGINT id PK "订单明细主键"
        BIGINT order_id FK "所属订单"
        BIGINT book_id FK "关联图书"
        VARCHAR book_title "下单书名快照"
        VARCHAR isbn "下单ISBN快照"
        DECIMAL unit_price "成交单价快照"
        INT quantity "购买数量"
        INT refunded_quantity "已批准退款数量"
        DECIMAL subtotal "明细小计"
    }

    PAYMENT {
        BIGINT id PK "支付记录主键"
        VARCHAR payment_no UK "支付流水号"
        BIGINT order_id FK "关联订单"
        ENUM payment_method "支付方式"
        DECIMAL amount "支付金额"
        ENUM status "PENDING/SUCCESS/FAILED/CLOSED/REFUNDED"
        DATETIME paid_time "支付完成时间"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    BOOK_REVIEW {
        BIGINT id PK "评价主键"
        BIGINT user_id FK "评价用户"
        BIGINT book_id FK "被评价图书"
        BIGINT order_item_id FK, UK "订单明细；每项一评"
        INT rating "1至5星"
        VARCHAR content "评价内容"
        INT status "0屏蔽/1展示"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    INVENTORY_LOG {
        BIGINT id PK "库存流水主键"
        BIGINT book_id FK "图书"
        INT change_quantity "增减数量，非0"
        INT before_stock "变更前库存"
        INT after_stock "变更后库存"
        ENUM change_type "PURCHASE_IN/ORDER_OUT/ORDER_CANCEL_RETURN/REFUND_RETURN/MANUAL_ADJUSTMENT"
        BIGINT order_id FK "关联订单，可空"
        VARCHAR remark "备注"
        DATETIME create_time "创建时间"
    }

    REFUND_REQUEST {
        BIGINT id PK "退款申请主键"
        VARCHAR refund_no UK "退款单号"
        BIGINT order_id FK "关联订单"
        BIGINT order_item_id FK "关联订单明细"
        BIGINT user_id FK "申请用户"
        ENUM type "REFUND_ONLY/RETURN_REFUND"
        ENUM status "PENDING/APPROVED/REJECTED"
        INT quantity "申请数量"
        DECIMAL amount "服务端核算退款金额"
        VARCHAR reason "申请原因"
        VARCHAR review_remark "审核备注"
        BIGINT reviewer_id FK "审核管理员，可空"
        DATETIME reviewed_time "审核时间"
        DATETIME create_time "创建时间"
        DATETIME update_time "更新时间"
    }

    USERS ||--o{ USER_ADDRESS : owns
    USERS ||--o{ CART_ITEM : owns
    USERS ||--o{ BOOK_ORDER : places
    USERS ||--o{ BOOK_REVIEW : writes
    USERS ||--o{ REFUND_REQUEST : applies
    USERS o|--o{ REFUND_REQUEST : reviews

    PUBLISHER ||--o{ BOOK : publishes
    CATEGORY o|--o{ CATEGORY : parent_of
    BOOK ||--o{ BOOK_AUTHOR : has
    AUTHOR ||--o{ BOOK_AUTHOR : participates
    BOOK ||--o{ BOOK_CATEGORY : has
    CATEGORY ||--o{ BOOK_CATEGORY : classifies
    BOOK ||--o{ CART_ITEM : added_to
    BOOK_ORDER ||--|{ ORDER_ITEM : contains
    BOOK ||--o{ ORDER_ITEM : referenced_by
    BOOK_ORDER ||--o{ PAYMENT : has
    BOOK_ORDER ||--o{ INVENTORY_LOG : causes
    BOOK ||--o{ INVENTORY_LOG : changes
    BOOK ||--o{ BOOK_REVIEW : receives
    ORDER_ITEM ||--o| BOOK_REVIEW : receives
    BOOK_ORDER ||--o{ REFUND_REQUEST : has
    ORDER_ITEM ||--o{ REFUND_REQUEST : has